<resources>
    <string name="app_name">Best Reads</string>

    <!--Error Messages-->
    <string name="network_unavailable_message">Network not available!</string>
    <string name="data_not_available">Data not available</string>
    <string name="no_response_from_server">No response from server.</string>
    <string name="description_not_found">Description Not Found.</string>
    <string name="amazon_link_not_found">Amazon Link Not Found.</string>
    <string name="rating_not_found">Rating Not Found.</string>

    <!--Content Descriptions-->
    <string name="content_description_book_cover">Book cover</string>

    <!--Main menu-->
    <string name="main_menu_hardcover_fiction">Hardcover Fiction</string>
    <string name="main_menu_paperback_fiction">Paperback Fiction</string>
    <string name="main_menu_hardcover_nonfiction">Hardcover Nonfiction</string>
    <string name="main_menu_paperback_nonfiction">Paperback Nonfiction</string>
    <string name="main_menu_hardcover_advice">Hardcover Advice and Misc.</string>
    <string name="main_menu_paperback_advice">Paperback Advice and Misc.</string>
    <string name="main_menu_business">Business</string>
    <string name="main_menu_science">Science</string>
    <string name="main_menu_children_books">Children’s Picture Books</string>
    <string name="main_menu_wish_list">Wish List</string>

    <!--Detail Activity-->
    <string name="detail_activity_title">Book Details</string>
    <string name="detail_add_wishlist_button_text">Add to Wish list</string>
    <string name="detail_remove_wishlist_button_text">Remove from Wish list</string>
    <string name="detail_amazon_button_text">Open in Amazon</string>

    <!--Detail menu-->
    <string name="detail_menu_share">Share</string>

    <!--Toast Messages Informative-->
    <string name="added_to_wish_list">Book added to wish list.</string>
    <string name="removed_from_wish_list">Book deleted from wish list.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
