<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_detail"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_above="@+id/divider1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <ImageView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/ivBookCover"
                android:contentDescription="@string/content_description_book_cover"
                app:srcCompat = "@drawable/book_cover_error"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Rank: 1"
                android:textSize="18sp"
                android:id="@+id/tvRank"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf= "@id/ivBookCover"
                app:layout_constraintHorizontal_bias="0.2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvWeeksOnList"
                tools:text="Weeks on list: 5"
                app:layout_constraintLeft_toLeftOf="@id/tvRank"
                app:layout_constraintTop_toBottomOf="@id/tvRank"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvRating"
                tools:text="Rating: 4.5/5 on Goodreads"
                app:layout_constraintLeft_toLeftOf="@id/tvRank"
                app:layout_constraintTop_toBottomOf="@id/tvWeeksOnList"
                app:layout_constraintRight_toRightOf="@+id/tvWeeksOnList"
                android:layout_marginTop="16dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:id="@+id/bWishList"
                android:text="@string/detail_add_wishlist_button_text"
                android:textSize="10sp"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/tvRating"
                app:layout_constraintLeft_toLeftOf="@id/tvWeeksOnList"
                app:layout_constraintRight_toRightOf="@id/tvWeeksOnList"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivBookCover"
                tools:text="Book title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAuthor"
                tools:text="Author"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/divider"
                android:background="@color/grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAuthor"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="Description"
                android:textSize="18sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bAmazon"
                android:text="@string/detail_amazon_button_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                android:layout_margin="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divider1"
        android:background="@color/grey"
        android:layout_above="@+id/adView"
        android:layout_margin="16dp"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>